# nanoss

./: .gitignore  Cargo.toml  README.md  deny.toml  nanoss.toml
.github/workflows/: deploy-docs.yml  lint.yml  perf-budget.yml  pr-preview.yml  release-binaries.yml  security.yml  supply-chain.yml  test.yml
bench/: thresholds.toml
crates/nanoss-cli/: Cargo.toml
crates/nanoss-cli/src/: main.rs
crates/nanoss-core/: Cargo.toml
crates/nanoss-core/src/: assets.rs  build.rs  cache.rs  data.rs  lib.rs  observability.rs  organization.rs  path.rs  ports.rs  render.rs  semantic.rs  seo.rs  tests.rs  utils.rs  validation.rs
crates/nanoss-metrics/: Cargo.toml
crates/nanoss-metrics/src/: lib.rs
crates/nanoss-plugin-api/: Cargo.toml
crates/nanoss-plugin-api/src/: lib.rs
crates/nanoss-plugin-api/wit/: plugin.wit
crates/nanoss-plugin-boundary/: Cargo.toml
crates/nanoss-plugin-boundary/src/: lib.rs
crates/nanoss-plugin-host/: Cargo.toml
crates/nanoss-plugin-host/src/: lib.rs
crates/nanoss-query/: Cargo.toml
crates/nanoss-query/src/: lib.rs
docs/: architecture.md  benchmarks.md  cli.md  config.md  decoupling-release.md  decoupling-validation.md  index.md  plugin-sdk.md  plugins.md  themes.md
docs/deploy/: cloudflare-pages.md  netlify.md  vercel.md
docs/templates/: page.html
examples/blog-basic/content/: hello-zh.md  hello.md
examples/blog-basic/content/assets/: readme.txt
examples/blog-basic/content/scripts/: site.js
examples/blog-basic/content/styles/: site.scss
examples/blog-basic/public/hello-nanoss/: index.html
examples/blog-basic/templates/: page.html
examples/realworld-e2e/: README.md  nanoss.toml
examples/realworld-e2e/content/: about.md  draft-post.md  future-post.md  index.md  published-post.md
examples/realworld-e2e/content/scripts/: site.js
examples/realworld-e2e/content/styles/: site.css
examples/realworld-e2e/templates/: page.html
public/hello-nanoss/: index.html
scripts/: bench_gate.sh  check_perf_budget.sh  rollback_docs.sh
