[workspace]
resolver = "2"
members = [
    "crates/nanoss-cli",
    "crates/nanoss-core",
    "crates/nanoss-plugin-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
minijinja = "2"
pulldown-cmark = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
