[workspace]
resolver = "2"
members = [
    "crates/nanoss-cli",
    "crates/nanoss-core",
    "crates/nanoss-plugin-api",
    "crates/nanoss-plugin-boundary",
    "crates/nanoss-plugin-host",
    "crates/nanoss-query",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
grass = "0.13"
minijinja = "2"
notify = "6"
once_cell = "1"
pulldown-cmark = "0.10"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syntect = "5"
thiserror = "2"
tiny_http = "0.12"
toml = "0.8"
walkdir = "2"
