[package]
name = "nanoss-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
nanoss-core = { path = "../nanoss-core" }
notify.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
