[package]
name = "nanoss-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
grass.workspace = true
lightningcss = { version = "1.0.0-alpha.70", default-features = false }
minijinja.workspace = true
nanoss-metrics = { path = "../nanoss-metrics" }
nanoss-plugin-boundary = { path = "../nanoss-plugin-boundary" }
nanoss-plugin-host = { path = "../nanoss-plugin-host" }
nanoss-query = { path = "../nanoss-query" }
once_cell.workspace = true
pulldown-cmark.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
rswind = "0.0.1-alpha.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "avif"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syntect.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
